--- a/DatabankNewest/.classpath
+++ b/DatabankNewest/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" output="test-classes" path="test"/>
-	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gwt-cal-0.9.2.jar"/>
@@ -15,6 +14,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-1.3.1.jar"/>
 	<classpathentry kind="lib" path="/home/reshet/smartgwt-3.0/smartgwt.jar"/>
 	<classpathentry kind="lib" path="/home/reshet/smartgwt-3.0/smartgwt-skins.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gwttheme.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/com.sun.enterprise.jst.server.runtimeTarget/GlassFish Server Open Source Edition 3 (Java EE 6)">
 		<attributes>
 			<attribute name="owner.project.facets" value="#system#;jst.web"/>
@@ -25,5 +25,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
